tipografia delnavbar menu cambiada

--- a/style.css
+++ b/style.css
@@ -867,9 +867,9 @@
     font-family: Poppins,sans-serif
   }
   
-  .font-radley {
+  /* .font-radley {
     font-family: Radley,sans-serif
-  }
+  } */
   
   .text-lg {
     font-size: 1.125rem;
